dhrm_sporada_V1.0/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
@import "../node_modules/angular-calendar/css/angular-calendar.css";
/* ngx-toaster css imports */
@import "ngx-toastr/toastr";

/* prime ng css import */
@import "primeng/resources/themes/lara-light-blue/theme.css";
/* @import "primeng/resources/themes/lara-dark-blue/theme.css"; */

@import "primeng/resources/primeng.css";

/* prime ng icons css */
@import "primeicons/primeicons.css";

/* material custom fonts */
@font-face {
  font-family: "Material Icons";
  font-style: normal;
  font-weight: 400;
  src: url(fonts/material.woff2) format("woff2");
}
/* custom font */
@font-face {
  font-family: "Poppins";
  src: url(./fonts/Poppins/Poppins-Regular.ttf) format("truetype"),
  url(./fonts/Poppins/Poppins-Bold.ttf) format('truetype');
  /* url(./fonts/Poppins/Poppins-Italic.ttf) format('truetype'), */
  /* url(./fonts/Poppins/Poppins-Medium.ttf) format('truetype'),
       url(./fonts/Poppins/Poppins-SemiBold.ttf) format('truetype'),
       url(./fonts/Poppins/Poppins-Bold.ttf) format('truetype'),
       url(./fonts/Poppins/Poppins-ExtraBold.ttf) format('truetype'),
       url(./fonts/Poppins/Poppins-Light.ttf) format('truetype'), */
}



/* tailwindcss imports */
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Edge, Opera */
  }
  .no-scrollbar {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }
}

/* scroll bar style */
.custom-scrollbar::-webkit-scrollbar-track {
        background-color: theme('colors.gray.200'); /* Use Tailwind colors */
        scrollbar-color:#000077;
    }

.custom-scrollbar::-webkit-scrollbar-thumb {
        scrollbar-color:#000077;
        background-color: theme('colors.blue.500'); /* Use Tailwind colors */
        border-radius: 4px; /* Optional: Add rounded corners */
}
/*css variables */
:root {
  /* verion two ui color theme */

  /* --primary-text: #f9f9fe;
  --bg-primary: #185eab;
  --primary:#2E6EE9;
  --secondary:#373C42 ;
  --accent:#EFF1FC;
  --bg-one: radial-gradient(ellipse at top right, #185eab, #3d90d7, #60b5ff);
  --bg-two: radial-gradient(ellipse at top right, #0e7490, #4f46e5);
  --poppins: "Poppins";
  --bg-gradient: linear-gradient(to bottom, #fdfbfb, #d4ebf6);
  --input-bg: #d8efff;
  --button-bg: #f9d15f; */

  /* version one ui color theme */

  --primary-text: #f9f9fe;
  --bg-primary: #195eac;
  --rane-logo:#185EAB;
  --primary: #195eac;
  --secondary: white;
  --accent: #2c353c;
  --poppins: "Poppins";
  --bg-gradient: linear-gradient(to bottom, #fdfbfb, #d4ebf6);
  --input-bg: #d8efff;
  --button-bg: #f9d15f;
  --bg-transparent: #3e7bff93;
  --transparent:#0050fc23;
  --sidenav-width: 280px;
  --required-size: 1rem;
  --id-card-width:145px;
  --id-card-height:72.5px;
  --trainee-img-width:150px;
  --trainee-img-height:150px;
  /* 60B5FF sec*/
  /* AFDDFF asc */
}

.material-icons {
  font-family: "Material Icons" !important;
  font-weight: normal;
  font-style: normal;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-feature-settings: "liga";
  -webkit-font-smoothing: antialiased;
}

/* material side-content margin left style */
/* .mat-drawer-content{
  margin-left: calc(var(--sidenav-width) + 25px) !important;
} */

html,
body {
  margin: 0;
  height: 100%;
  font-family: var(--poppins);
}

.mat-placeholder-required.mat-form-field-required-marker {
  color: red;
}

/* material expansion panel icon style */
.mat-expansion-indicator::after{
  border-style: solid;
    border-width: 0 3px 3px 0 !important;
    content: "";
    display: inline-block;
    padding: 3px;
    transform: rotate(45deg);
    vertical-align: middle;
    border-color: gray !important;
}

/* .mat-form-field-appearance-outline .mat-form-field-outline {

    color: white;
  }

  .mat-form-field-appearance-outline .mat-form-field-outline:focus {
    color: white;
  } */

input.mat-input-element {
  color: black;
  font-size: 1rem;
}

.mat-form-field-appearance-outline
  .mat-form-field-outline.mat-form-field-disabled {
  color: black;
}

.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline {
  color: black;
}

.mat-form-field-outline:disabled {
  color: black;
}

.mat-focused .mat-form-field-label {
  /*change color of label*/
  color: black !important;
}

.mat-select:disabled {
  color: black;
}

/* angular toastifier css */
.angular-toastify-toast {
  border-radius: 10px !important;
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
  font-family: var(--poppins) !important;
  color: black !important;
  margin-inline:10px;
  margin-top:10px;
}

/* toast success css */

/* .angular-toastify-toast--success {
  background-color: #66ff66 !important;
} */

/* bg gradient for login  */
.bg-gradient {
  background: var(--bg-gradient);
}

/* scrollbar hide css */
.mat-drawer-inner-container::-webkit-scrollbar {
    display: none;
}

/* material drawer container style */
.mat-drawer-container{
  background-color: white !important;
}

.modal-backdrop {
  z-index: 1040 !important;
  height:100%;
  width: 100%;
}
/* html select base style */
select,
::picker(select) {
  appearance: base-select;
}

a:hover{
  text-decoration: none !important;
}

a{
  text-decoration: none !important;
}

/* primeNg tab view custom styles */
.p-tabview-nav{
  font-family: var(--poppins) !important;
  font-weight: bold !important;
  border: none !important;
   /* background-color: var(--transparent) !important; */
}

.p-tabview-nav-container{
   /* box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1) !important;
   border-radius: 5px !important;
   border: rgb(224, 224, 224) .5px solid !important; */
} 

.p-tabview-nav-link{
  background-color: var(--transparent) !important;
  padding-block: .5rem !important;
  margin-block: .5rem !important;
  margin-inline: .5rem !important;
}
.p-tabview-panels{
  padding:0 !important
}


.p-tabview-selected{
  background-color: var(--transparent) !important;
}

.p-highlight{
  /* background-color: var(--transparent) !important; */
}
/* th and td text no-wrap for global table */

th,td{
  text-wrap: nowrap;
}

